fixed collapsing dirs

--- a/style.css
+++ b/style.css
@@ -47,21 +47,6 @@ body {
     vertical-align: middle;
     margin: 6px;
 }
-.collapse > * + *{
-    display:none;
-}
-.collapse > *{
-    cursor:pointer;
-}
-.collapse:focus{
-    outline:none;
-}
-.collapse:focus > * + *{
-    display:block; 
-}
-.collapse .name::before {
-    content: "> ";
-}
 h1 {
     color: #888888;
     margin-top: 0;
@@ -73,4 +58,19 @@ h1 {
 .vline {
     width: 2px;
     background-color: #888888;
+}
+.clickable input {
+    display: none;
+}
+.clickable .collapse {
+    display: none;
+}
+.clickable input:checked ~ .collapse {
+    display: block;
+}
+.name {
+    cursor: pointer;
+}
+.name::before {
+    content: "> ";
 }
